2025-11-09  Markus Gans  <guru.mail@muenster.de>
	* The virtual terminal allows for faster tracking of changes by also 
	  saving vertical adjustments

2025-10-20  Markus Gans  <guru.mail@muenster.de>
	* The rotozoomer example now uses a precomputed trigonometric lookup
	  table

2025-10-19  Markus Gans  <guru.mail@muenster.de>
	* FVTerm's performance optimization reduces CPU cycle count

2025-10-09  Markus Gans  <guru.mail@muenster.de>
	* Some speed optimizations were made to the methods 
	  of the FString class
	* Add some methods to FString to improve its compatibility 
	  with the STL

2025-09-21  Markus Gans  <guru.mail@muenster.de>
	* The ConEmu, FPoint, FSize, and FRect classes have been refactored

2025-09-14  Markus Gans  <guru.mail@muenster.de>
	* Correct the use of "NSIG" in Cygwin

2025-09-13  Markus Gans  <guru.mail@muenster.de>
	* Classes in the event loop now have better safety and 
	  input validation

2025-08-31  Markus Gans  <guru.mail@muenster.de>
	* The key hash algorithm now uses an FNV-1a hash

2025-08-28  Markus Gans  <guru.mail@muenster.de>
	* Further FRingBuffer optimizations

2025-08-24  Markus Gans  <guru.mail@muenster.de>
	* Performance for FRingBuffer::back() has been optimized

2025-02-15  Markus Gans  <guru.mail@muenster.de>
	* Fixed FLineEdit label not shown again after hide() + show()

2025-02-09  Markus Gans  <guru.mail@muenster.de>
	* Significant speed-up when using FVTerm::copyArea with multiple 
	  overlapping and transparent layers. This reduces the CPU load 
	  of the process by ⅔.

2024-12-24  Markus Gans  <guru.mail@muenster.de>
	* Better FChar color value direct access

2024-11-29  Markus Gans  <guru.mail@muenster.de>
	* Fix misaligned FScrollView viewport when using ignorePadding()

2024-11-18  Markus Gans  <guru.mail@muenster.de>
	* Added examples/widget-colors to show the internal predefined 
	  colors of the widgets

2024-11-06  Markus Gans  <guru.mail@muenster.de>
	* Fix FComboBox widget list expansion
